--- a/src/styles/sidebar-footer.css
+++ b/src/styles/sidebar-footer.css
@@ -1,5 +1,6 @@
 body{
   background-color: #000;
+  font-family: var(--font-dm-sans);
 }
 
 .sidebar{
@@ -21,7 +22,6 @@ body{
       text-decoration: none;
       font-weight: 600;
       font-size: 14px;
-      font-family: "DM Sans", sans-serif
     };
     li{
       padding: 10px 0;
@@ -73,7 +73,7 @@ body{
   color: #b3b3b3;
   font-size: 14px;
   font-weight: 700;
-  font-family: "DM Sans", sans-serif;
+  
   text-align: center;
   text-decoration: none;
   text-transform: none;
@@ -116,7 +116,7 @@ body{
 .text{
   padding-bottom: 14px;
   color: #fff;
-  font-family: "DM Sans", sans-serif;
+  
 }
 
 .title{
@@ -140,7 +140,6 @@ body{
   color: #000;
   font-size: 12px;
   font-weight: 700;
-  font-family: "DM Sans", sans-serif;
   text-decoration: none;
   text-transform: none;
 
